<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Druids</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="tutorial">Tutorial</string>
    <string name="druids">Druids</string>
    <string name="player_name">Player name</string>
    <string name="input_invalid">Input invalid!</string>
    <string name="code" translatable="false">CODE</string>
    <string name="lobby_code" translatable="false">Lobby Code:</string>
    <string name="start_game">Start Game</string>
    <string name="qr_code" translatable="false">QR-Code</string>
    <string name="cancel">Cancel</string>
    <string name="participants">participants</string>
    <string name="cancel2">Cancel</string>
    <string name="enter_lobby_with_qr_code">Enter Lobby with QR-Code</string>
    <string name="enter_lobby_with_code">Enter Lobby with Code</string>
    <string name="enter_lobby_code">Enter Lobby Code:</string>
    <string name="possible_number_of_players_3_5_" tools:ignore="TypographyDashes">Possible number of players: 3-5</string>
    <string name="tutorial1" translatable="false">tutorial1</string>
    <string name="tutorial3" translatable="false">tutorial3</string>
    <string name="tutorial4" translatable="false">tutorial4</string>
    <string name="tutorial2" translatable="false">tutorial2</string>
    <string name="back">Back</string>
    <string name="tafel_der_dom_nen">Table of Domains</string>
    <string name="points_view">Points View</string>
    <string name="playedcard1" translatable="false">playedcard1</string>
    <string name="playedcard5" translatable="false">playedcard5</string>
    <string name="playedcard4" translatable="false">playedcard4</string>
    <string name="playedcard3" translatable="false">playedcard3</string>
    <string name="playedcard2" translatable="false">playedcard2</string>
    <string name="active_player">"Active player: "</string>
    <string name="play_gaia">You have the Gaia. Choose a color.</string>
    <string name="qr_code_image_description">QR Code to enter a Lobby</string>
    <string name="roundName">Round</string>
    <string name="cheatName">Cheat</string>
    <string name="active_player_label">Active player:</string>
    <string name="nobodyCheated">Nobody</string>
    <string name="has_any_player_cheated">Has any player cheated?</string>
    <string name="table">Table</string>
    <string name="points">Points</string>
    <string name="hand">Hand</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_you_want_to_leave_this_screen">Are you sure you want to leave this game?</string>
    <string name="yes">Yes</string>
    <string name="keep_playing">Keep Playing!</string>
    <string name="result">Result</string>
</resources>