<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context=".activities.ActiveGame">

    <FrameLayout
        android:id="@+id/cardsInHand"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
    </FrameLayout>

    <ImageView
        android:id="@+id/playedCardPlayerX"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:contentDescription="@string/playedcard1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/card_back" />

    <ImageView
        android:id="@+id/playedCardPlayer4"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:contentDescription="@string/playedcard2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintVertical_bias="0.3"
        android:rotation="45"
        app:srcCompat="@drawable/card_back" />

    <ImageView
        android:id="@+id/playedCardPlayer3"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:contentDescription="@string/playedcard3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintVertical_bias="0.15"
        android:rotation="140"
        app:srcCompat="@drawable/card_back" />

    <ImageView
        android:id="@+id/playedCardPlayer2"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:contentDescription="@string/playedcard4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.1"
        android:rotation="235"
        app:srcCompat="@drawable/card_back" />

    <ImageView
        android:id="@+id/playedCardPlayer1"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="175dp"
        android:contentDescription="@string/playedcard5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.3"
        android:rotation="315"
        app:srcCompat="@drawable/card_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/active_player_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/playedCardPlayer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:id="@+id/active_player_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/active_player_label"
                style="@style/TextViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/active_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                style="@style/TextViewStyle"
                app:layout_constraintStart_toEndOf="@+id/active_player_label"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="7dp"
        android:text="@string/points_view"
        app:layout_constraintBottom_toTopOf="@+id/playedCardPlayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/playedGaia"
        android:visibility="invisible"
        android:layout_width="120dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.45"
        android:rotation="350"
        app:srcCompat="@drawable/card_back"/>


        <LinearLayout
            android:id="@+id/playedGaiaColors"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center"
            android:layout_marginStart="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
